tempfile/derive_more/tests/compile_fail/debug/lifetime_no_debug.rs
struct NoDebug<'a> {
    a: &'a f64,
}

#[derive(derive_more::Debug)]
struct SomeType<'a> {
    no_debug: NoDebug<'a>,
}

fn main() {}
